<resources>
    <string name="app_name">IchiApp</string>

    <string name="hint_phone">Phone</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_cpassword">Confirm Password</string>

    <string name="hint_fname">First Name</string>
    <string name="hint_lname">Last Name</string>

    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="fragment_shop">Home Delivery Products</string>
    <string name="fragment_services">Service Providers</string>
    <string name="fragment_disocunts">Big Discount Offers</string>
    <string name="hint_address">Address</string>
    <string name="hint_pincode">Pin Code</string>
    <string name="btn_add_address">Add Address</string>


</resources>
