<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_address"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    tools:context="sourabh.ichiapp.activities.AddAddressActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/btn_login_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/fname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:hint="@string/hint_fname"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:inputType="textCapWords"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint"
                    android:layout_weight="50"
                    android:layout_marginRight="5dp"
                    />

                <EditText
                    android:id="@+id/lname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@color/white"
                    android:hint="@string/hint_lname"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:inputType="textCapWords"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint"
                    android:layout_weight="50"
                    android:layout_marginLeft="5dp"
                    />


            </LinearLayout>
            <EditText
                android:id="@+id/phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_phone"
                android:inputType="number"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_address"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/pincode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_pincode"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint"
                android:inputType="number" />

            <!-- Login Button -->

            <!-- Link to Login Screen -->

        </LinearLayout>

        <Button
            android:id="@+id/btnAddAddress"
            android:layout_width="match_parent"

            android:layout_marginTop="20dip"
            android:background="#ea4c88"
            android:text="@string/btn_add_address"
            android:textColor="@color/white"
            android:layout_height="50dp" />


    </LinearLayout>

</RelativeLayout></ScrollView>